--- a/week01/index.htm
+++ b/week01/index.htm
@@ -137,11 +137,11 @@
         <section class="content-section">
             <h2 class="section-header">About Me</h2>
             <div class="section-content">
-                <img src="azouma_gerard_adenkou.jpg" alt="Profile photo" class="profile-image">
+                <img src="images/azouma_gerard_adenkou.jpg" alt="Profile photo" class="profile-image">
                 <p>My name is Azouma Gerard Adenkou and I go by BYU-i. I was born in Togo and currently living with my wife in Sierra Leone. I am currently a Byui student studing web & computer programming. My wife is my world and I love spending time with her. I love to travel and I love to learn new things.</p>
                 
                 <h3>Lome, Togo</h3>
-                <img src="/Flag_of_Togo.png" alt="Official Flag of Togo" class="flag">
+                <img src="images/Flag_of_Togo.png" alt="Official Flag of Togo" class="flag">
                 <p class="flag-caption">Official Flag of Togo</p>
                 <p>Togo is a small country located in west Africa and having the first nice Aerport in west Africa. It is home to 20% of the world's plant and animal species. The country is best known for its vegetation, diversity of cultures, and attraction.</p>
             </div>
