--- a/temples.html
+++ b/temples.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="temples.css">
     <link rel="stylesheet" href="temples-large.css">
-    
+    <script src="temples.js" defer></script>
 </head>
 <body>
     <header>
