filtered-temple in progress

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -29,43 +29,9 @@
    </nav>
    <main>
     <h1>Home</h1>
+<div  id="temples-container"></div>
     <div class="Album">
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
-        <figure>
-            <img src="temple image/washington temple.jpg" alt="washington temple">
-            <figcaption> washington temple </figcaption>
-        </figure>
+
     </div>
    </main>
 
