filtered-temple update on the footer

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -36,8 +36,8 @@
    </main>
 
    <footer>
-        <p>©2025 <span class="flower">❀</span> Azouma Gerard Adenkou <span class="flower">❀</span> Togo</p>
-        <p>Last Modification: 22/1/2025 2:20:44 </p>
+        <p>©2025 <span class="flower">❀</span>Temple page/ Azouma Gerard Adenkou <span class="flower">❀</span> Togo</p>
+        <p>Last Modification: 3/02/2025 5:45:53 </p>
    </footer>
 </body>
 </html>
