--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -30,65 +30,68 @@
     <h1>Home</h1>
     <div class="temple-container">
         <figure>
-            const temples = [
-  {
-    templeName: "Aba Nigeria",
-    location: "Aba, Nigeria",
-    dedicated: "2005, August, 7",
-    area: 11500,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg"
-  },
-  {
-    templeName: "Manti Utah",
-    location: "Manti, Utah, United States",
-    dedicated: "1888, May, 21",
-    area: 74792,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manti-utah/400x250/manti-temple-768192-wallpaper.jpg"
-  },
-  {
-    templeName: "Payson Utah",
-    location: "Payson, Utah, United States",
-    dedicated: "2015, June, 7",
-    area: 96630,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/400x225/payson-utah-temple-exterior-1416671-wallpaper.jpg"
-  },
-  {
-    templeName: "Yigo Guam",
-    location: "Yigo, Guam",
-    dedicated: "2020, May, 2",
-    area: 6861,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/yigo-guam/400x250/yigo_guam_temple_2.jpg"
-  },
-  {
-    templeName: "Washington D.C.",
-    location: "Kensington, Maryland, United States",
-    dedicated: "1974, November, 19",
-    area: 156558,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/washington-dc/400x250/washington_dc_temple-exterior-2.jpeg"
-  },
-  {
-    templeName: "Lima Perú",
-    location: "Lima, Perú",
-    dedicated: "1986, January, 10",
-    area: 9600,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/lima-peru/400x250/lima-peru-temple-evening-1075606-wallpaper.jpg"
-  },
-  {
-    templeName: "Mexico City Mexico",
-    location: "Mexico City, Mexico",
-    dedicated: "1983, December, 2",
-    area: 116642,
-    imageUrl:
-    "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/mexico-city-mexico/400x250/mexico-city-temple-exterior-1518361-wallpaper.jpg"
-  },
-  // Add more temple objects here...
-];
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg" alt="Aba Nigeria"  loading="lazy">
+            <figcaption>location: "Aba, Nigeria",
+                dedicated: "2005, August, 7",
+                area: 11500</figcaption>
+        </figure>
+        <figure>    
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manti-utah/400x250/manti-temple-768192-wallpaper.jpg" alt="Manti Utah"  loading="lazy">
+            <figcaption>location: "Manti, Utah, United States",
+                dedicated: "1888, May, 21",
+                area: 74792</figcaption> 
+        </figure>
+        <figure>
+            
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/ogden-utah/400x250/ogden-temple-768193-wallpaper.jpg" alt="Ogden Utah"  loading="lazy">
+            <figcaption>location: "Ogden, Utah, United States",
+                dedicated: "1972, January, 18",
+                area: 11500</figcaption>    
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/rome-italy/400x250/rome-temple-768194-wallpaper.jpg" alt="Rome Italy"  loading="lazy">
+            <figcaption>location: "Rome, Italy",
+                dedicated: "2019, March, 10",
+                area: 40000</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/salt-lake-city-utah/400x250/salt-lake-temple-768195-wallpaper.jpg" alt="Salt Lake City Utah"  loading="lazy">
+            <figcaption>location: "Salt Lake City, Utah, United States",
+                dedicated: "1893, April, 6",
+                area: 253015</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/sao-paulo-brazil/400x250/sao-paulo-temple-768196-wallpaper.jpg" alt="Sao Paulo Brazil"  loading="lazy">
+            <figcaption>location: "Sao Paulo, Brazil",
+                dedicated: "1978, October, 30",
+                area: 49600</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/seattle-washington/400x250/seattle-temple-768197-wallpaper.jpg" alt="Seattle Washington"  loading="lazy">
+            <figcaption>location: "Seattle, Washington, United States",
+                dedicated: "1980, November, 17",
+                area: 11000</figcaption>
+
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/tokyo-japan/400x250/tokyo-temple-768198-wallpaper.jpg" alt="Tokyo Japan"  loading="lazy">
+            <figcaption>location: "Tokyo, Japan",
+                dedicated: "1980, October, 27",
+                area: 107688</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/washington-dc/400x250/washington-temple-768199-wallpaper.jpg" alt="Washington DC"  loading="lazy">
+            <figcaption>location: "Washington, D.C., United States",
+                dedicated: "1974, November, 19",
+                area: 16000</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg" alt="Aba Nigeria"  loading="lazy">
+            <figcaption>location: "Aba, Nigeria",
+                dedicated: "2005, August, 7",
+                area: 11500</figcaption>
+        </figure>
+
     </div>
    </main>
 
